<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExemploActivityForResult</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tela1">Tela1</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="principal_screen">Principal Screen</string>
    <string name="name">*Name</string>
    <string name="email">*Email</string>
    <string name="send_screen1">Send to Screen 1</string>
    <string name="send_screen2">Send to Screen 2</string>
    <string name="accept_data">Accept Data</string>
    <string name="reject_data">Reject Data</string>
    <string name="screen1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="fone">*Fone</string>

</resources>
