<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tela2" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_2" />
    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    <TextView
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <TextView
        android:id="@+id/phone2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_data"
            android:onClick="aceitou" />

        <Button
            android:id="@+id/bt2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_data"
            android:onClick="rejeitou" />

    </LinearLayout>

</LinearLayout>
